--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
         }
 
         .container {
-            margin: 20px auto;
-            width: 300px;
-            padding: 20px;
-            background-color: #f5f5f5;
+            margin: 90px auto;
+            width: 1200px;
+            padding: 90px;
+            background-color: #D2E0FB;
             border-radius: 5px;
         }
-
         h1 {
             color: #333;
         }
