--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Temperature Converter</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Papyrus, sans-serif;
             text-align: center;
         }
 
@@ -16,31 +16,34 @@
             border-radius: 5px;
         }
         h1 {
+            font-size: 60px;
             color: #333;
         }
 
         label {
             display: block;
             font-weight: bold;
+            font-size: 30px;
         }
 
         input[type="number"] {
             width: 100%;
-            padding: 5px;
-            margin: 5px 0;
+            padding: 7px;
+            margin: 7px 0;
         }
 
         button {
             background-color: #007bff;
             color: #fff;
             border: none;
-            padding: 10px 20px;
+            padding: 10px 30px;
             cursor: pointer;
         }
 
         p {
             margin: 10px 0;
             font-weight: bold;
+            font-size: 20px;
         }
     </style>
 </head>
